[gd_scene load_steps=5 format=2]

[ext_resource path="res://Alien/Alien.png" type="Texture" id=1]
[ext_resource path="res://Alien/Alien.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 223, 107 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 20 )

[node name="Alien" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 62
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -7 )
polygon = PoolVector2Array( -29, 6, -25, 3, -11, 0, -9, 0, -9, -8, -6, -14, -2, -17, 3, -17, 7, -14, 10, -8, 10, 0, 11, 0, 25, 3, 29, 6, 29, 10, 25, 13, 18, 15, 11, 16, 7, 21, 0, 22, -8, 21, -12, 16, -18, 15, -25, 13, -29, 10 )

[node name="HeliShootZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeliShootZone"]
position = Vector2( 1, 107 )
shape = SubResource( 1 )

[node name="CanShoot" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="ChangePatrolDir" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Bump" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bump"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="HeliShootZone" to="." method="_on_HeliShootZone_area_entered"]
[connection signal="area_exited" from="HeliShootZone" to="." method="_on_HeliShootZone_area_exited"]
[connection signal="timeout" from="CanShoot" to="." method="_on_CanShoot_timeout"]
[connection signal="timeout" from="ChangePatrolDir" to="." method="_on_ChangePatrolDir_timeout"]
[connection signal="area_entered" from="Bump" to="." method="_on_Bump_area_entered"]
